# hla-unreal-visualizer

./: .gitignore  HLAVisualizer.uproject  PROJECT_SUMMARY.md  README.md
Config/: DefaultEngine.ini  DefaultGame.ini
Content/Map/: L_Madrid.umap
Content/Materials/: A320_inRange.uasset  RadarMaterial.uasset
Content/Models/model1/: a320-3d-model.uasset  dbl_Group_001.uasset  dbl_Group_002.uasset  dbl_Group_002_ncl_1.uasset  dbl_Group_003.uasset  dbl_Group_003_ncl_1.uasset  dbl_Group_003_ncl_2.uasset  dbl_Group_003_ncl_3.uasset  dbl_Group_003_ncl_4.uasset  dbl_Group_003_ncl_5.uasset  dbl_Group_003_ncl_6.uasset  dbl_Group_003_ncl_7.uasset  dbl_Group_003_ncl_8.uasset  dbl_Group_003_ncl_9.uasset  dbl_Group_004.uasset  dbl_Group_005.uasset  dbl_Group_006.uasset  dbl_Group_007.uasset  dbl_Group_008.uasset  dbl_Group_009.uasset  dbl_Group_009_ncl_1.uasset  dbl_Group_010.uasset  dbl_Group_010_ncl_1.uasset  dbl_Group_010_ncl_2.uasset  dbl_Group_010_ncl_3.uasset  dbl_Group_011.uasset  dbl_Group_011_ncl_1.uasset  dbl_Group_012.uasset  dbl_Group_012_ncl_1.uasset  dbl_Group_013.uasset  dbl_Group_013_ncl_1.uasset  dbl_Group_013_ncl_2.uasset  dbl_Group_013_ncl_3.uasset  dbl_Group_014.uasset  dbl_Group_014_ncl_1.uasset  dbl_Group_014_ncl_2.uasset  dbl_Group_014_ncl_3.uasset  dbl_Group_014_ncl_4.uasset  dbl_Group_014_ncl_5.uasset  dbl_Group_015.uasset  (+24 more)
Source/: HLAVisualizer.Target.cs  HLAVisualizerEditor.Target.cs
Source/HLAVisualizer/: HLAVisualizer.Build.cs  HLAVisualizer.cpp
Source/HLAVisualizer/Radar/: ARadarVisualizationActor.cpp  ARadarVisualizationActor.h
Source/HLAVisualizer/Settings/: UHLASettings.cpp  UHLASettings.h
Source/HLAVisualizer/Types/: FAircraftState.h  FRadarContact.h
Source/HLAVisualizer/UnrealFederate/: AUnrealFederateActor.cpp  AUnrealFederateActor.h  FHLAAmbassador.cpp  FHLAAmbassador.h  FHLAFederateRunnable.cpp  FHLAFederateRunnable.h
Tools/HLAConnectivityTest/: CMakeLists.txt  main.cpp
